fix default json body
